add namespace in missingkubectl queries and update alias name
Signed-off-by: eminaktas <eminaktas34@gmail.com>
Signed-off-by: Emin Aktaş <emin.aktas@trendyol.com>

--- a/fluentbit/template-values.yaml
+++ b/fluentbit/template-values.yaml
@@ -60,7 +60,7 @@ config:
       Add   x_cluster ${K8S_CLUSTER}
     [FILTER]
       Name        modify
-      Alias       kube_audit_minikube
+      Alias       kube_audit_modify
       Match_Regex ^(kube_audit)$
       Add         x_cluster ${K8S_CLUSTER}
 
